--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
-    <a target="_blank" href="https://github.com/babu-ch/ballgame">source</a>
+    <a target="_blank" href="https://github.com/babu-ch/ballgame2">source</a>
   </body>
 </html>
